gospel/tests/negative/t39.mli
type 'a t1

type t2 = t1

(* ERROR:
   Line 3
   wrong number of arguments
   one argument must be given to t1 *)
